@@ -2,90 +2,55 @@ package com.stockpro.alert.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod;
-import org.springframework.security.authentication.AuthenticationProvider;
-import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.core.userdetails.UserDetailsService;
-import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.client.RestTemplate;
-import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.List;
+import lombok.RequiredArgsConstructor;
 
+import java.util.Collections;
+
+/**
+ * SecurityConfig — Minimal security for alert-service.
+ *
+ * <p>All JWT validation is handled by the API Gateway. This service trusts
+ * the gateway-injected headers verified via InternalSecurityFilter.
+ * Role-based access rules are enforced via @PreAuthorize on controllers.
+ */
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity
+@RequiredArgsConstructor
 public class SecurityConfig {
 
-  private final JwtAuthFilter jwtAuthFilter;
-  private final RestTemplateInterceptor restTemplateInterceptor;
+    private final InternalSecurityFilter internalSecurityFilter;
+    private final RestTemplateInterceptor restTemplateInterceptor;
 
-  public SecurityConfig(JwtAuthFilter jwtAuthFilter, RestTemplateInterceptor restTemplateInterceptor) {
-    this.jwtAuthFilter = jwtAuthFilter;
-    this.restTemplateInterceptor = restTemplateInterceptor;
-  }
+    @Bean
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+        http
+            .csrf(AbstractHttpConfigurer::disable)
+            .sessionManagement(session ->
+                    session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            .authorizeHttpRequests(auth -> auth
+                    .requestMatchers("/actuator/**").permitAll()
+                    // Internal scheduler endpoints — callable only from gateway (verified by InternalSecurityFilter)
+                    .requestMatchers("/api/v1/alerts/low-stock", "/api/v1/alerts/overstock").permitAll()
+                    .anyRequest().authenticated())
+            .addFilterBefore(internalSecurityFilter, UsernamePasswordAuthenticationFilter.class);
 
-  @Bean
-  public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-    http
-        .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-        .csrf(AbstractHttpConfigurer::disable)
-        .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-        .authorizeHttpRequests(auth -> auth
-            .requestMatchers(HttpMethod.GET, "/actuator/**").permitAll()
-            .requestMatchers(HttpMethod.GET, "/api/v1/alerts/test-email").permitAll()
-            .requestMatchers(HttpMethod.POST, "/api/v1/alerts/low-stock", "/api/v1/alerts/overstock").permitAll()
-            .requestMatchers(HttpMethod.GET, "/api/v1/alerts/unacknowledged").hasAnyAuthority("MANAGER", "ADMIN")
-            .requestMatchers(HttpMethod.POST, "/api/v1/alerts/bulk").hasAuthority("ADMIN")
-            .requestMatchers(HttpMethod.GET, "/api/v1/alerts").hasAuthority("ADMIN")
-            .requestMatchers(HttpMethod.DELETE, "/api/v1/alerts/**").hasAuthority("ADMIN")
-            .anyRequest().authenticated())
-        .authenticationProvider(authenticationProvider())
-        .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
+        return http.build();
+    }
 
-    return http.build();
-  }
-
-  @Bean
-  public AuthenticationProvider authenticationProvider() {
-    DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
-    authProvider.setUserDetailsService(userDetailsService());
-    return authProvider;
-  }
-
-  @Bean
-  public UserDetailsService userDetailsService() {
-    return username -> {
-      throw new UsernameNotFoundException("Stateless JWT used.");
-    };
-  }
-
-  @Bean
-  public RestTemplate restTemplate() {
-    RestTemplate restTemplate = new RestTemplate();
-    restTemplate.setInterceptors(java.util.Collections.singletonList(restTemplateInterceptor));
-    return restTemplate;
-  }
-
-  @Bean
-  public CorsConfigurationSource corsConfigurationSource() {
-    CorsConfiguration config = new CorsConfiguration();
-    config.setAllowedOrigins(List.of("*"));
-    config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-    config.setAllowedHeaders(List.of("*"));
-    config.setMaxAge(3600L);
-
-    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-    source.registerCorsConfiguration("/**", config);
-    return source;
-  }
+    @Bean
+    public RestTemplate restTemplate() {
+        RestTemplate restTemplate = new RestTemplate();
+        restTemplate.setInterceptors(Collections.singletonList(restTemplateInterceptor));
+        return restTemplate;
+    }
 }
